--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.no-scroll{
+/*.no-scroll{
     height: 100%;
     overflow-y: hidden;
 }
-/*
+
 To desable scrolling
 in <body>
 */
@@ -123,7 +123,14 @@ html{
     right: 0;
 }
 
-.footer{
+.fixed-top{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.pagecategorie{
     background-color: #cccccc;
     width: 100%;
     height: 100vh;
@@ -181,11 +188,14 @@ html{
     
     opacity: 0%;
     background-color: #666666;
-    height: 95%;
-    width: 90%;
-    margin: auto;  
+    height: 0%;
+    width: 100%;
+    margin-left: auto;  
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: 0;
     
-    transition-property: opacity;
+    transition-property: opacity, height;
     transition-duration: 0.8s;
 }
 
@@ -194,15 +204,18 @@ html{
     font-weight: bold;
     display: flex;
     justify-content: center;
+    padding: 50px;
 }
 
 .case .definition{
     font-size: 20px;
     float: bottom;
+    padding: 20px;
 }
 
 .case:hover p{
     opacity: 70%;
+    height: 100%;
 }
 
 .case-sculpture{
@@ -260,7 +273,7 @@ html{
 
 .page{
     position: absolute;
-    top: 200vh;
+    top: 0;
     left: 0;
     right: 0;
     width: 100%;
@@ -274,7 +287,6 @@ html{
 
 #pagegravure{
     background-color: blue;
-    z-index: 0;
 }
 
 #pagedessin{
