--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ html{
 }
 
 .pagecategorie{
-    background-color: #cccccc;
+    background-color: rgb(186, 195, 204);
     width: 100%;
     height: 100vh;
     box-shadow: 0px 3px 5px black;
@@ -219,21 +219,21 @@ html{
 }
 
 .case-sculpture{
-    background-image: url(images/sculpture/sculpture1.jpg);
+    background-image: url(images/categorie-page/sculpture.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
 }
 
 .case-gravure{
-    background-image: url(images/gravure/gravure2.jpg);
+    background-image: url(images/categorie-page/gravure.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
 }
 
 .case-dessin{
-    background-image: url(images/dessin/dessin3.jpg);
+    background-image: url(images/categorie-page/dessin.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
@@ -246,29 +246,24 @@ html{
 }
 
 .retour-btn{
-    width: 100px;
-    height: 40px;
-    
+  
     position: absolute;
     top: 25px;
     left: 25px;
     
-    font-family: "verdana";
-    font-size: 25px;
-    color: #666666;
-    background-color: #cccccc;
+    border-radius: 50%;
+    box-shadow: 0px 3px 5px black;
     
-    border: solid 3px;
-    border-color: #999999;
-    border-radius: 7px;
+    height: 80px;
+    margin: 0;
     
-    transition-property: background-color, color;
-    transition-duration: 0.5s;
+    transition-property: height, margin;
+    transition-duration: 0.2s;
 }
 
 .retour-btn:hover{
-    color: white;
-    background-color: #999999;
+    height: 74px;
+    margin: 3px;
 }
 
 .page{
@@ -281,14 +276,14 @@ html{
 }
 
 #pagesculpture{
-    background-color: red;
+    background-color: rgb(132, 121, 119);
     
 }
 
 #pagegravure{
-    background-color: blue;
+    background-color: rgb(202, 202, 202);
 }
 
 #pagedessin{
-    background-color: green;
+    background-color: rgb(145, 144, 150);
 }
