--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ html{
     right: 0;
     height: max-content;
     width: 82vw;
-    box-shadow: -3px -3px 5px black;
+    box-shadow: -1px -1px 5px grey;
 }
 
 .sculpture .page{
@@ -305,7 +305,7 @@ html{
 }
 
 .dessin .page{
-    background-color: rgb(145, 144, 150);
+    background-color: rgb(245, 245, 245);
 }
 
 .navbar-btn-display{
@@ -326,7 +326,7 @@ html{
     height: 100%;
     width: 18vw;
     
-    background-color: #666666;
+    background-color: rgb(220, 220, 220);
     
     display: flex;
     flex-direction: column;
@@ -372,11 +372,14 @@ html{
 }
 
 .container{
-    padding: 15px;
+    padding: 5px;
+    margin: 10px;
+    border-radius: 5px;
+    background-color: rgb(220, 220, 220);
 }
 
 .bande{
-    width: 80%;
+    width: 90%;
     height: max-content;
     
     margin: auto;
@@ -390,17 +393,19 @@ html{
     border-radius: 4px;
 }
 
-.sculpture .bande{
+/*.sculpture .bande{
     background-color: darkgray;
 }
 
 .gravure .bande{
     background-color: darkgray;
 }
-
+*/
 .dessin .bande{
-    background-color: darkgray;
-}
+    background-color: rgb(220, 220, 220);
+    }
+
+
 
 .bande img{
     margin: 5px;
