--- a/style.css
+++ b/style.css
@@ -410,24 +410,41 @@ background-color:  #666666;
     width: 80%;
     height: 60vh;
     
+    background-color: red;
+    
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
     
     border-radius: 2px;
     
-    background-color: orange;
+    overflow: hidden;
     
-    overflow: auto;
+    position: relative;
 }
 
 .slider{
-    height: max-content;
-    width: 100%;
+    background-color: yellow;
+    position: absolute;
+    height: 100%;
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    animation: slide 15s infinite;
+}
+
+@keyframes slide{
+    0% {top: 0;}
+    10% {top: 0;}
+    30% {top: -60vh;}
+    40% {top: -60vh;}
+    60% {top: -120vh;}
+    70% {top: -120vh;}
+    100% {top: 0;}
 }
 
 .scrolling-panel img{
-    width: 100%;
+    height: 100%;
 }
 
 .galerie{
