--- a/style.css
+++ b/style.css
@@ -527,3 +527,12 @@ background-color:  #666666;
     width: 100%;
     height: 100%;
 }
+
+
+@media screen and (max-width: 1080px){
+    
+    body{
+        display: none;
+    }
+    
+}
