--- a/style.css
+++ b/style.css
@@ -240,12 +240,6 @@ html{
     margin-bottom: 100px;
 }
 
-.case .definition{
-    font-size: 20px;
-    float: bottom;
-    padding: 20px;
-}
-
 .case:hover p{
     opacity: 70%;
     height: 100%;
@@ -535,7 +529,7 @@ background-color:  #666666;
 
 
 @media screen and (max-width: 1080px){
-        
+    
 .page-accueil{
     background-image: url(images/accueil-page/accueil_mobile.JPG);
 }
@@ -559,6 +553,57 @@ background-color:  #666666;
     margin-left: 5px;
     margin-right: 5px;
     font-size: 20px;
+}
+
+.pagecategorie{
+    background-color: rgb(231, 231, 231);
+    width: 100%;
+    height: 100vh;
+    box-shadow: 0px 3px 5px black;
+}
+
+.categorie{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    margin-top: 10vh;
+    width: max-content;
+}
+
+.credit{
+    padding-top: 7vh;
+    margin: auto;
+    text-align: center;
+}
+
+.case{
+    height: 25vh;
+    width: 80vw;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.case p{
+    
+    opacity: 60%;
+    background-color: #666666;
+    height: 100%;
+    
+    transition-property: opacity, height;
+    transition-duration: 0.8s;
+}
+
+.case:hover p{
+    opacity: 20%;
+    height: 0%;
+}
+
+.retour-btn{
+  
+    position: absolute;
+    top: 45px;
+    left: 25px;
+    z-index: 2;
 }
 
 }
