--- a/style.css
+++ b/style.css
@@ -606,4 +606,175 @@ background-color:  #666666;
     z-index: 2;
 }
 
+/*ihfklqshkjdhsk*/
+.navbar-btn-display{
+    position: fixed;
+    cursor: pointer;
+    margin: 5px;
+    padding: 5px;
+    padding-top: 2px;
+}
+
+.navbar{
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+    
+    height: 100%;
+    width: 18vw;
+    
+    background-color: rgb(37, 37, 37);
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.espace{
+    height: 150px;
+    width: 100%;
+    background-color: rgb(40, 40, 40);
+}
+
+.petit-espace{
+    height: 50px;
+    width: 100%;
+}
+
+.navbar-btn{
+    width: 12vw;
+    height: max-content;
+    
+    display: flex;
+    justify-content: center;
+    
+    margin: 5px;
+    margin-top: 10px;
+    padding: 5px;
+    
+    color: rgb(241, 241, 241);
+    font-size: 3.3vh;
+    font-family: 'Gill sans';
+    border-radius: 5px;
+
+    transition-property: background-color;
+    transition-duration: 0.5s;
+}
+
+.navbar-btn:hover{
+background-color:  #666666;
+}
+
+.scrolling-panel{
+    width: 80%;
+    height: 30vh;
+}
+
+.slider{
+    position: absolute;
+    height: 100%;
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    animation: slide 15s infinite;
+}
+
+@keyframes slide{
+    0% {top: 0;}
+    10% {top: 0;}
+    30% {top: -30vh;}
+    40% {top: -30vh;}
+    60% {top: -60vh;}
+    70% {top: -60vh;}
+    100% {top: 0;}
+}
+
+.scrolling-panel img{
+    height: 100%;
+}
+
+.galerie{
+    width: 80%;
+    height: max-content;
+    
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+}
+
+.bande{
+    width: 100%;
+    height: max-content;
+    
+    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    
+    padding-top: 25px;
+    padding-bottom: 25px;
+    
+    border-radius: 2px;
+    background-color: white;
+    
+    box-shadow: 2px 2px 2px grey;
+}
+
+.bande .img-main{
+    width: 80%;
+    height: 25vh;
+    
+    overflow: auto;
+    
+    margin: auto;
+
+    box-shadow: 2px 2px 2px #444444;
+}
+
+.img-main img{
+    width: 100%;
+}
+
+.bande-img-secondaire{
+    width: 80%;
+    height: 100px;
+    
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    
+    border: solid 2px rgb(241, 241, 241);
+    
+    overflow: auto;
+    display: flex;
+}
+
+.bande-img-secondaire img{
+   border: solid 1px white; 
+   opacity: 100%;
+   
+   transition-property: opacity;
+   transition-duration: 0.3s;
+}
+
+.bande-img-secondaire img:hover{
+    opacity: 70%;
+}
+
+.info-oeuvre{
+    background-color: rgb(241, 241, 241);
+    box-shadow: 1px 1px 2px #444444;
+    width: 80%;
+    height: 20vh;
+    margin: auto;
+}
+
+.info-oeuvre object{
+    width: 100%;
+    height: 100%;
+}
+/*kjdflhsglfghksh*/
+
 }
